updated excel import to work with android 10 (api 29)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
         <item>November</item>
         <item>Desember</item>
     </string-array>
+
+    <string name="ipaddress">http://10.0.0.1:3000</string>
+    <!--<string name="ipaddress">http://85.166.159.139:3000</string>-->
 </resources>
